[package]
name = "rsomics-link-prediction"
version = "0.2.0"
description = "Neighborhood-overlap link-prediction scores (Jaccard, Adamic-Adar, resource allocation, preferential attachment, common-neighbor-centrality/CCPA) — value-exact Rust port of networkx link_prediction"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-link-prediction"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-link-prediction"
path = "src/main.rs"

[lib]
name = "rsomics_link_prediction"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bench"
harness = false
